image file added

--- a/projects.json
+++ b/projects.json
@@ -1,8 +1,8 @@
 [
   {
-    "projectImgSrc": "'assets/images/FinalProject.webp'",
-    "projectName": "'Trending Movies'",
-    "projectDetails": "'Angular movie website using The Movie Database api.'",
+    "projectImgSrc": "images/FinalProject.webp",
+    "projectName": "Trending Movies",
+    "projectDetails": "Angular movie website using The Movie Database api.",
     "tools": [
       { "bootstrap": "fa-brands fa-bootstrap pe-2 bootstrap-color" },
       { "angular": "fa-brands fa-angular pe-2 angular-color" },
@@ -12,14 +12,14 @@
       { "html": "fa-brands fa-html5 pe-2 html-color" }
     ],
     "links": [
-      { "github": "'https://github.com/nohawaheed/Final-Project'" },
-      { "website": "'https://nohawaheed.github.io/Final-Project/'" }
+      { "github": "https://github.com/nohawaheed/Final-Project" },
+      { "website": "https://nohawaheed.github.io/Final-Project/" }
     ]
   },
   {
-    "projectImgSrc": "'assets/images/Corona.webp'",
-    "projectName": "'Corona Reports'",
-    "projectDetails": "'A simple website to view covid-19 world ranking.'",
+    "projectImgSrc": "images/Corona.webp",
+    "projectName": "Corona Reports",
+    "projectDetails": "A simple website to view covid-19 world ranking.",
     "tools": [
       { "bootstrap": "fa-brands fa-bootstrap pe-2 bootstrap-color" },
       { "angular": "fa-brands fa-angular pe-2 angular-color" },
@@ -29,14 +29,14 @@
       { "css": "fa-brands fa-css3-alt pe-2 css-color" }
     ],
     "links": [
-      { "github": "'https://github.com/nohawaheed/corona-reports'" },
-      { "website": "'https://nohawaheed.github.io/corona-reports/'" }
+      { "github": "https://github.com/nohawaheed/corona-reports" },
+      { "website": "https://nohawaheed.github.io/corona-reports/" }
     ]
   },
   {
-    "projectImgSrc": "'assets/images/StartAngular.webp'",
-    "projectName": "'Start Angular'",
-    "projectDetails": "'Angular website using bootstrap, routing and reactive form.'",
+    "projectImgSrc": "images/StartAngular.webp",
+    "projectName": "Start Angular",
+    "projectDetails": "Angular website using bootstrap, routing and reactive form.",
     "tools": [
       { "bootstrap": "fa-brands fa-bootstrap pe-2 bootstrap-color" },
       { "angular": "fa-brands fa-angular pe-2 angular-color" },
@@ -46,14 +46,14 @@
       { "sass": "fa-brands fa-sass pe-2 sass-color" }
     ],
     "links": [
-      { "github": "'https://github.com/nohawaheed/Start-Angular'" },
-      { "website": "'https://nohawaheed.github.io/Start-Angular/'" }
+      { "github": "https://github.com/nohawaheed/Start-Angular" },
+      { "website": "https://nohawaheed.github.io/Start-Angular/" }
     ]
   },
   {
-    "projectImgSrc": "'assets/images/InsureLandingPage.webp'",
-    "projectName": "'Insure Landing Page'",
-    "projectDetails": "'React simple landing page using bootstrap.'",
+    "projectImgSrc": "images/InsureLandingPage.webp",
+    "projectName": "Insure Landing Page",
+    "projectDetails": "React simple landing page using bootstrap.",
     "tools": [
       { "bootstrap": "fa-brands fa-bootstrap pe-2 bootstrap-color" },
       { "react": "fa-brands fa-react pe-2 react-color" },
@@ -62,14 +62,14 @@
       { "css": "fa-brands fa-css3-alt pe-2 css-color" }
     ],
     "links": [
-      { "github": "'https://github.com/nohawaheed/Insure-landing-page'" },
-      { "website": "'https://nohawaheed.github.io/Insure-landing-page/'" }
+      { "github": "https://github.com/nohawaheed/Insure-landing-page" },
+      { "website": "https://nohawaheed.github.io/Insure-landing-page/" }
     ]
   },
   {
-    "projectImgSrc": "'assets/images/QuizApp.webp'",
-    "projectName": "'Quiz App'",
-    "projectDetails": "'Js multiple choices quiz game using oop concepts.'",
+    "projectImgSrc": "images/QuizApp.webp",
+    "projectName": "Quiz App",
+    "projectDetails": "Js multiple choices quiz game using oop concepts.",
     "tools": [
       { "bootstrap": "fa-brands fa-bootstrap pe-2 bootstrap-color" },
       { "javascript": "fa-brands fa-js pe-2 javascript-color" },
@@ -78,14 +78,14 @@
       { "css": "fa-brands fa-css3-alt pe-2 css-color" }
     ],
     "links": [
-      { "github": "'https://github.com/nohawaheed/Js-Quiz-Game'" },
-      { "website": "'https://nohawaheed.github.io/Js-Quiz-Game/'" }
+      { "github": "https://github.com/nohawaheed/Js-Quiz-Game" },
+      { "website": "https://nohawaheed.github.io/Js-Quiz-Game/" }
     ]
   },
   {
-    "projectImgSrc": "'assets/images/WeatherApp.webp'",
-    "projectName": "'Weather App'",
-    "projectDetails": "'Display today’s weather and forecasts the next two days.'",
+    "projectImgSrc": "images/WeatherApp.webp",
+    "projectName": "Weather App",
+    "projectDetails": "Display today’s weather and forecasts the next two days.",
     "tools": [
       { "bootstrap": "fa-brands fa-bootstrap pe-2 bootstrap-color" },
       { "javascript": "fa-brands fa-js pe-2 javascript-color" },
@@ -94,14 +94,14 @@
       { "css": "fa-brands fa-css3-alt pe-2 css-color" }
     ],
     "links": [
-      { "github": "'https://github.com/nohawaheed/Weather-App'" },
-      { "website": "'https://nohawaheed.github.io/Weather-App/'" }
+      { "github": "https://github.com/nohawaheed/Weather-App" },
+      { "website": "https://nohawaheed.github.io/Weather-App/" }
     ]
   },
   {
-    "projectImgSrc": "'assets/images/Angora.webp'",
-    "projectName": "'Angora Website'",
-    "projectDetails": "'Responsive website using bootstrap framework.'",
+    "projectImgSrc": "images/Angora.webp",
+    "projectName": "Angora Website",
+    "projectDetails": "Responsive website using bootstrap framework.",
     "tools": [
       { "bootstrap": "fa-brands fa-bootstrap pe-2 bootstrap-color" },
       { "javascript": "fa-brands fa-js pe-2 javascript-color" },
@@ -110,8 +110,8 @@
       { "css": "fa-brands fa-css3-alt pe-2 css-color" }
     ],
     "links": [
-      { "github": "'https://github.com/nohawaheed/Angora-Website'" },
-      { "website": "'https://nohawaheed.github.io/Angora-Website/'" }
+      { "github": "https://github.com/nohawaheed/Angora-Website" },
+      { "website": "https://nohawaheed.github.io/Angora-Website/" }
     ]
   }
 ]
